definition fonctions, requetes pour inscrire un enfant et lui ajouter de l'argent

--- a/css/app.css
+++ b/css/app.css
@@ -1,16 +1,4 @@
-#enfants{
-    width: 25%;
-}
-
-#inscriptionEnfant
+.estActive
 {
-    display: inline-block;
-}
 
-@media (min-width: 400px)
-{
-    .list-group
-    {
-        width: 100%;
-    }
 }
